# oxc-index-vec

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/: idxslice.rs  indexing.rs  lib.rs  macros.rs  rayon_impl.rs
tests/: test.rs
